--- a/A.html
+++ b/A.html
@@ -32,7 +32,7 @@
 
 <body>
 
-  <video autoplay loop muted><source src="ips-776519A7-DC3A-44B0-A2FA-57CD05CDE831.MP4"></video>
+  <video autoplay loop muted><source src="A.mov"></video>
   
 
 </body>
