--- a/A.html
+++ b/A.html
@@ -32,7 +32,7 @@
 
 <body>
 
-  <video autoplay loop muted><source src="A.mov"></video>
+  <video autoplay loop muted><source src="A.webm"></video>
   
 
 </body>
