--- a/A.html
+++ b/A.html
@@ -7,24 +7,11 @@
 
   <style>
 
-  * {
-    box-sizing: border-box;
-  }
-
-  body {
-    margin: 0;
-    font-family: sans-serif;
-  }
-
-  img {
-    max-width: 100%;
-    display: block;
-  }
-
-  video {
-    max-width: 100%;
-    display: block;
-  }
+  img{
+  display:block;
+  width:100%; height:100%;
+  object-fit: cover;
+}
 
   </style>
 
@@ -32,7 +19,7 @@
 
 <body>
 
-  <video autoplay loop muted><source src="A.webm"></video>
+  <img src="ezgif-4-24b82cabfe48.gif"></img>
   
 
 </body>
