--- a/FAQ1.html
+++ b/FAQ1.html
@@ -26,6 +26,7 @@
   }
 
   .lineOne {
+    max-width: 734.75px;
     margin-left:168.25px;
     margin-top: 97.5px;
     display: flex;
@@ -40,13 +41,13 @@
     overflow-x: auto;
     background: white;
     color:black;
+    visibility: hidden;
   }
 
   .lineOne img{
 width:54.75px;
 height:97.5px;
 margin-right: 2px;
-visibility: hidden;
   }
 
   .FAQ {
@@ -73,6 +74,7 @@ color:black;
     margin-left:168.25px;
     display:flex;
     position: fixed;
+    visibility: hidden;
   }
 
     .lineZero .letter {
@@ -93,6 +95,7 @@ border: 1px solid white;
     margin-left:168.25px;
     display:flex;
     position: fixed;
+    visibility: hidden;
   }
 
     .lineTwo .letter {
@@ -101,9 +104,10 @@ border: 1px solid white;
     margin-right: 2.3px;
   }
 
-      .lineOne .letter {
-visibility: hidden;
-  }
+  .lineOne .letter {
+    padding: 25.25px 19px 33px 19px;
+    margin-right: 2.3px;
+}
 
       .KEY .letter {
 border: 1px solid white;
@@ -203,37 +207,37 @@ border: 1px solid white;
 
 <div class="lineOne">
 
-  <img class="A" src="W.gif" />
-  <img class="B" src="H.gif" />
-  <img class="C" src="E.gif" />
-  <img class="D" src="R.gif" />
+  <img class="W" src="W.gif" />
+  <img class="H" src="H.gif" />
+  <img class="E" src="E.gif" />
+  <img class="R" src="R.gif" />
   <img class="E" src="E.gif" />
   <div class="letter">_</div>
-  <img class="G" src="D.gif" />
-  <img class="H" src="O.gif" />
+  <img class="D" src="D.gif" />
+  <img class="O" src="O.gif" />
   <div class="letter">_</div>
-  <img class="J" src="B.gif" />
-  <img class="K" src="I.gif" />
-  <img class="L" src="K.gif" />
-  <img class="M" src="E.gif" />
-  <img class="N" src="S.gif" />
+  <img class="B" src="B.gif" />
+  <img class="I" src="I.gif" />
+  <img class="K" src="K.gif" />
+  <img class="E" src="E.gif" />
+  <img class="S" src="S.gif" />
   <div class="letter">_</div>
-  <img class="P" src="G.gif" />
-  <img class="Q" src="O.png" />
+  <img class="G" src="G.gif" />
+  <img class="O" src="O.gif" />
   <div class="letter">_</div>
-  <img class="S" src="W.gif" />
-  <img class="T" src="H.gif" />
-  <img class="U" src="E.gif" />
-  <img class="V" src="N.gif" />
+  <img class="W" src="W.gif" />
+  <img class="H" src="H.gif" />
+  <img class="E" src="E.gif" />
+  <img class="N" src="N.gif" />
   <div class="letter">_</div>
-  <img class="W" src="T.gif" />
-  <img class="X" src="H.gif" />
-  <img class="Y" src="E.gif" />
-  <img class="Z" src="Y.gif" />
+  <img class="T" src="T.gif" />
+  <img class="H" src="H.gif" />
+  <img class="E" src="E.gif" />
+  <img class="Y" src="Y.gif" />
   <div class="letter">_</div>
-  <img class="X" src="D.gif" />
-  <img class="Y" src="I.gif" />
-  <img class="Z" src="E.gif" />
+  <img class="D" src="D.gif" />
+  <img class="I" src="I.gif" />
+  <img class="E" src="E.gif" />
   <div class="letter">?</div>
 </div>
 
