--- a/KEY.html
+++ b/KEY.html
@@ -145,7 +145,7 @@ border: 1px solid white;
 
 </div>
 
-<a href="abcurdity.xyz/FAQ1.html" class="FAQ">
+<a href="FAQ1.html" class="FAQ">
 
 <div class="letter">F</div>
 <div class="letter">A</div>
