--- a/FAQ1.html
+++ b/FAQ1.html
@@ -153,7 +153,7 @@ border: 1px solid white;
 
   </div>
 
-<a href="abcurdity.xyz/KEY.html" class="KEY">
+<a href="KEY.html" class="KEY">
 
 <div class="letter">K</div>
 <div class="letter">E</div>
