--- a/KEY.html
+++ b/KEY.html
@@ -194,7 +194,7 @@ border: 1px solid white;
   <img class="N" src="N.gif" />
   <img class="O" src="O.gif" />
   <img class="P" src="P.gif" />
-  <img class="Q" src="Q.png" />
+  <img class="Q" src="Q.PNG" />
   <img class="R" src="R.gif" />
   <img class="S" src="S.gif" />
   <img class="T" src="T.gif" />
