--- a/KEY.html
+++ b/KEY.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>HOW TO RIDE A BIKE ft. THE VIDEO ALPHABET</title>
+  <title>BIKE FAQ in VIDEO ABC</title>
 <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 
   <style>
@@ -32,7 +32,13 @@
     overflow-x: auto;
   }
 
-  .lineOne img{
+  .lineOne video{
+width:54.75px;
+height:97.5px;
+margin-right: 2px;
+  }
+
+    .lineOne img{
 width:54.75px;
 height:97.5px;
 margin-right: 2px;
@@ -45,7 +51,13 @@ margin-right: 2px;
     overflow-x: auto;
   }
 
-  .lineThree img{
+  .lineThree video{
+width:54.75px;
+height:97.5px;
+margin-right: 2px;
+  }
+
+    .lineThree img{
 width:54.75px;
 height:97.5px;
 margin-right: 2px;
@@ -155,19 +167,19 @@ border: 1px solid white;
 
 <div class="lineOne">
 
-  <img class="A" src="A.gif" />
-  <img class="B" src="B.gif" />
-  <img class="C" src="C.gif" />
-  <img class="D" src="D.gif" />
-  <img class="E" src="E.gif" />
-  <img class="F" src="F.gif" />
-  <img class="G" src="G.gif" />
-  <img class="H" src="H.gif" />
-  <img class="I" src="I.gif" />
-  <img class="J" src="J.gif" />
-  <img class="K" src="K.gif" />
-  <img class="L" src="L.gif" />
-  <img class="M" src="M.gif" />
+  <video autoplay loop muted class="A" src="A.MP4"> </video>
+  <video autoplay loop muted class="B" src="B.MP4"> </video>
+  <video autoplay loop muted class="C" src="C.MP4"> </video>
+  <video autoplay loop muted class="D" src="D.MP4"> </video>
+  <video autoplay loop muted class="E" src="E.MP4"> </video>
+  <video autoplay loop muted class="F" src="F.MP4"> </video>
+  <video autoplay loop muted class="G" src="G.MP4"> </video>
+  <video autoplay loop muted class="H" src="H.MP4"> </video>
+  <video autoplay loop muted class="I" src="I.MP4"> </video>
+  <img class="J" src="J.gif"> </img>
+  <video autoplay loop muted class="K" src="K.MP4"> </video>
+  <video autoplay loop muted class="L" src="L.MP4"> </video>
+  <video autoplay loop muted class="M" src="M.MP4"> </video>
 
 </div>
 
@@ -191,19 +203,19 @@ border: 1px solid white;
 
   <div class="lineThree">
     
-  <img class="N" src="N.gif" />
-  <img class="O" src="O.gif" />
-  <img class="P" src="P.gif" />
-  <img class="Q" src="Q.PNG" />
-  <img class="R" src="R.gif" />
-  <img class="S" src="S.gif" />
-  <img class="T" src="T.gif" />
-  <img class="U" src="U.gif" />
-  <img class="V" src="V.gif" />
-  <img class="W" src="W.gif" />
-  <img class="X" src="X.gif" />
-  <img class="Y" src="Y.gif" />
-  <img class="Z" src="Z.gif" />
+  <video autoplay loop muted class="N" src="N.MP4"> </video>
+  <video autoplay loop muted class="O" src="O.MP4"> </video>
+  <video autoplay loop muted class="P" src="P.MP4"> </video>
+  <img class="Q" src="Q.PNG"> </img>
+  <video autoplay loop muted class="R" src="R.MP4"> </video>
+  <video autoplay loop muted class="S" src="S.MP4"> </video>
+  <video autoplay loop muted class="T" src="T.MP4"> </video>
+  <video autoplay loop muted class="U" src="U.MP4"> </video>
+  <video autoplay loop muted class="V" src="V.MP4"> </video>
+  <video autoplay loop muted class="W" src="W.MP4"> </video>
+  <img class="X" src="X.gif"> </img>
+  <video autoplay loop muted class="Y" src="Y.MP4"> </video>
+  <video autoplay loop muted class="Z" src="Z.MP4"> </video>
 
   </div>
 
