--- a/FAQ1.html
+++ b/FAQ1.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>HOW TO RIDE A BIKE ft. THE VIDEO ALPHABET</title>
+  <title>BIKE FAQ in VIDEO ABC</title>
 <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 
   <style>
@@ -31,6 +31,7 @@
     margin-top: 97.5px;
     display: flex;
     overflow-x: auto;
+    z-index: 2;
   }
 
     .writing {
@@ -41,10 +42,16 @@
     overflow-x: auto;
     background: white;
     color:black;
-    visibility: hidden;
+    z-index: 1;
   }
 
   .lineOne img{
+width:54.75px;
+height:97.5px;
+margin-right: 2px;
+  }
+
+    .lineOne video{
 width:54.75px;
 height:97.5px;
 margin-right: 2px;
@@ -135,24 +142,6 @@ border: 1px solid white;
 
 <body>
 
-  <div class="lineZero"> 
-
-<div class="letter">A</div>
-<div class="letter">B</div>
-<div class="letter">C</div>
-<div class="letter">D</div>
-<div class="letter">E</div>
-<div class="letter">F</div>
-<div class="letter">G</div>
-<div class="letter">H</div>
-<div class="letter">I</div>
-<div class="letter">J</div>
-<div class="letter">K</div>
-<div class="letter">L</div>
-<div class="letter">M</div>
-
-  </div>
-
 <a href="KEY.html" class="KEY">
 
 <div class="letter">K</div>
@@ -161,83 +150,47 @@ border: 1px solid white;
 
 </a>
 
-<div class="FAQ">
+<a href="FAQ2.html" class="FAQ">
 
 <div class="letter">F</div>
 <div class="letter">A</div>
 <div class="letter">Q</div>
 
-</div>
-
-<div class="writing">
-
-<div class="letter">W</div>
-<div class="letter">H</div>
-<div class="letter">E</div>
-<div class="letter">R</div>
-<div class="letter">E</div>
-<div class="letter">_</div>
-<div class="letter">D</div>
-<div class="letter">O</div>
-<div class="letter">_</div>
-<div class="letter">B</div>
-<div class="letter">I</div>
-<div class="letter">K</div>
-<div class="letter">E</div>
-<div class="letter">S</div>
-<div class="letter">_</div>
-<div class="letter">G</div>
-<div class="letter">O</div>
-<div class="letter">_</div>
-<div class="letter">W</div>
-<div class="letter">H</div>
-<div class="letter">E</div>
-<div class="letter">N</div>
-<div class="letter">_</div>
-<div class="letter">T</div>
-<div class="letter">H</div>
-<div class="letter">E</div>
-<div class="letter">Y</div>
-<div class="letter">_</div>
-<div class="letter">D</div>
-<div class="letter">I</div>
-<div class="letter">E</div>
-<div class="letter">?</div>
-</div>
+</a>
 
 <div class="lineOne">
 
-  <img class="W" src="W.gif" />
-  <img class="H" src="H.gif" />
-  <img class="E" src="E.gif" />
-  <img class="R" src="R.gif" />
-  <img class="E" src="E.gif" />
+  <video autoplay loop muted class="W" src="W.MP4"> </video>
+  <video autoplay loop muted class="H" src="H.MP4"> </video>
+  <video autoplay loop muted class="E" src="E.MP4"> </video>
+  <video autoplay loop muted class="R" src="R.MP4"> </video>
+  <video autoplay loop muted class="E" src="E.MP4"> </video>
   <div class="letter">_</div>
-  <img class="D" src="D.gif" />
-  <img class="O" src="O.gif" />
+  <video autoplay loop muted class="D" src="D.MP4"> </video>
+  <video autoplay loop muted class="O" src="O.MP4"> </video>
   <div class="letter">_</div>
-  <img class="B" src="B.gif" />
-  <img class="I" src="I.gif" />
-  <img class="K" src="K.gif" />
-  <img class="E" src="E.gif" />
-  <img class="S" src="S.gif" />
+  <video autoplay loop muted class="B" src="B.MP4"> </video>
+  <video autoplay loop muted class="I" src="I.MP4"> </video>
+  <video autoplay loop muted class="K" src="K.MP4"> </video>
+  <video autoplay loop muted class="E" src="E.MP4"> </video>
+  <video autoplay loop muted class="S" src="S.MP4"> </video>
   <div class="letter">_</div>
-  <img class="G" src="G.gif" />
-  <img class="O" src="O.gif" />
+  <video autoplay loop muted class="G" src="G.MP4"> </video>
+  <video autoplay loop muted class="O" src="O.MP4"> </video>
   <div class="letter">_</div>
-  <img class="W" src="W.gif" />
-  <img class="H" src="H.gif" />
-  <img class="E" src="E.gif" />
-  <img class="N" src="N.gif" />
+  <video autoplay loop muted class="W" src="W.MP4"> </video>
+  <video autoplay loop muted class="H" src="H.MP4"> </video>
+  <video autoplay loop muted class="E" src="E.MP4"> </video>
+  <video autoplay loop muted class="N" src="N.MP4"> </video>
   <div class="letter">_</div>
-  <img class="T" src="T.gif" />
-  <img class="H" src="H.gif" />
-  <img class="E" src="E.gif" />
-  <img class="Y" src="Y.gif" />
+  <video autoplay loop muted class="T" src="T.MP4"> </video>
+  <video autoplay loop muted class="H" src="H.MP4"> </video>
+  <video autoplay loop muted class="E" src="E.MP4"> </video>
+  <video autoplay loop muted class="Y" src="Y.MP4"> </video>
   <div class="letter">_</div>
-  <img class="D" src="D.gif" />
-  <img class="I" src="I.gif" />
-  <img class="E" src="E.gif" />
+  <video autoplay loop muted class="D" src="D.MP4"> </video>
+  <video autoplay loop muted class="I" src="I.MP4"> </video>
+  <video autoplay loop muted class="E" src="E.MP4"> </video>
   <div class="letter">?</div>
 </div>
 
