--- a/FAQ10.html
+++ b/FAQ10.html
@@ -167,7 +167,7 @@ border: 1px solid white;
 
 </a>
 
-<a href="FAQ9.html" class="FAQ">
+<a href="FAQ10.html" class="FAQ">
 
 <div class="letter">F</div>
 <div class="letter">A</div>
@@ -180,50 +180,44 @@ border: 1px solid white;
   <video autoplay loop muted src="O.MP4"></video>
   <video autoplay loop muted src="W.MP4"></video>
   <div class="letter">_</div>
-  <video autoplay loop muted src="C.MP4"></video>
-  <video autoplay loop muted src="A.MP4"></video>
-  <video autoplay loop muted src="N.MP4"></video>
-  <div class="letter">_</div>
-  <video autoplay loop muted src="Y.MP4"></video>
+  <video autoplay loop muted src="D.MP4"></video>
   <video autoplay loop muted src="O.MP4"></video>
-  <video autoplay loop muted src="U.MP4"></video>
-  <div class="letter">_</div>
-  <video autoplay loop muted src="T.MP4"></video>
-  <video autoplay loop muted src="E.MP4"></video>
-  <video autoplay loop muted src="L.MP4"></video>
-  <video autoplay loop muted src="L.MP4"></video>
   <div class="letter">_</div>
   <video autoplay loop muted src="I.MP4"></video>
-  <video autoplay loop muted src="F.MP4"></video>
   <div class="letter">_</div>
-  <video autoplay loop muted src="Y.MP4"></video>
-  <video autoplay loop muted src="O.MP4"></video>
-  <video autoplay loop muted src="U.MP4"></video>
+  <video autoplay loop muted src="D.MP4"></video>
+  <video autoplay loop muted src="E.MP4"></video>
+  <video autoplay loop muted src="T.MP4"></video>
+  <video autoplay loop muted src="E.MP4"></video>
   <video autoplay loop muted src="R.MP4"></video>
+  <video autoplay loop muted src="M.MP4"></video>
+  <video autoplay loop muted src="I.MP4"></video>
+  <video autoplay loop muted src="N.MP4"></video>
+  <video autoplay loop muted src="E.MP4"></video>
+  <div class="letter">_</div>
+  <video autoplay loop muted src="M.MP4"></video>
+  <video autoplay loop muted src="Y.MP4"></video>
   <div class="letter">_</div>
   <video autoplay loop muted src="B.MP4"></video>
   <video autoplay loop muted src="I.MP4"></video>
   <video autoplay loop muted src="K.MP4"></video>
   <video autoplay loop muted src="E.MP4"></video>
-    <div class="letter">_</div>
-  <video autoplay loop muted src="I.MP4"></video>
+  <div class="letter">'</div>
   <video autoplay loop muted src="S.MP4"></video>
   <div class="letter">_</div>
-  <video autoplay loop muted src="C.MP4"></video>
-  <video autoplay loop muted src="H.MP4"></video>
+  <video autoplay loop muted src="L.MP4"></video>
+  <video autoplay loop muted src="O.MP4"></video>
+  <video autoplay loop muted src="V.MP4"></video>
   <video autoplay loop muted src="E.MP4"></video>
+  <div class="letter">_</div>
+  <video autoplay loop muted src="L.MP4"></video>
   <video autoplay loop muted src="A.MP4"></video>
-  <video autoplay loop muted src="T.MP4"></video>
-  <video autoplay loop muted src="I.MP4"></video>
   <video autoplay loop muted src="N.MP4"></video>
   <video autoplay loop muted src="G.MP4"></video>
-  <div class="letter">_</div>
-  <video autoplay loop muted src="O.MP4"></video>
-  <video autoplay loop muted src="N.MP4"></video>
-  <div class="letter">_</div>
-  <video autoplay loop muted src="Y.MP4"></video>
-  <video autoplay loop muted src="O.MP4"></video>
   <video autoplay loop muted src="U.MP4"></video>
+  <video autoplay loop muted src="A.MP4"></video>
+  <video autoplay loop muted src="G.MP4"></video>
+  <video autoplay loop muted src="E.MP4"></video>
   <div class="letter">?</div>
 </div>
 
