--- a/KEY.html
+++ b/KEY.html
@@ -125,6 +125,16 @@ border: 1px solid white;
     display: none;
 }
 
+.MISSION {
+position:absolute;
+margin-left:434px;
+margin-top:285px;
+color:white;
+font-size:18.5px;
+width:168.25px;
+text-align:center;
+}
+
   </style>
 
 </head>
@@ -164,6 +174,13 @@ border: 1px solid white;
 <div class="letter">Q</div>
 
 </a>
+
+<div class="MISSION">
+
+<p>this_webzine_uses_<br>animated_ABC's_to_<br>explore_the_intimacy_<br>between_an_inanimate_<br>bike_and_its_rider.<br>_it_raises_questions_<br>like_"HOW_CAN_YOU_<br>TELL_IF_YOUR_BIKE_<br>IS_CHEATING_ON_<br>YOU?"_and_"how_am_i_<br>reading_any_of_<br>this,_my_eyes_hurt?"
+  <br> this_webzine_would_<br>like_to_thank_<br>ADAM,_MONICA,_and_SUNNIE_<br>for_sharing_their_<br>biking_questions!</p>
+
+  </div>
 
 <div class="lineOne">
 
