--- a/HOME.html
+++ b/HOME.html
@@ -15,7 +15,7 @@
   body {
     margin: 0;
     font-family: 'VT323', monospace;
-    font-size: 36px;
+    font-size: 48px;
     color: white;
     background-color: black;
   }
@@ -27,75 +27,60 @@
 
   .lineOne {
   	max-width: 100%;
-    margin-left:0px;
-    margin-top: 97.5px;
+    margin-top: 12.5%;
     display: flex;
     overflow-x: auto;
   }
 
-  .lineOne video{
-width:54.75px;
-height:97.5px;
+    .lineOne img{
+width:7.5%;
+height:25%;
 margin-right: 2px;
   }
 
-    .lineOne img{
-width:54.75px;
-height:97.5px;
+    .lineOne a img{
+width:96%;
+height:96%;
+margin-left:1px;
 margin-right: 2px;
   }
 
     .lineThree {
     max-width: 100%;
-    margin-left:0px;
-    margin-top: 97.5px;
+    margin-top: 13.5%;
     display: flex;
-    overflow-x: auto;
   }
 
-  .lineThree video{
-width:54.75px;
-height:97.5px;
-margin-right: 2px;
-  }
-
-    .lineThree img{
-width:54.75px;
-height:97.5px;
+  .lineThree a {
+width:7.5%;
+height:25%;
+margin-left:1px;
 margin-right: 2px;
   }
 
     .lineZero {
     max-width: 100%;
-    top:0px;
-    margin-left:0px;
+    top:8%;
+    left:3%;
     display:flex;
-    position: fixed;
+    position: absolute;
   }
 
     .lineZero .letter {
-border: 1px solid white;
-    padding: 25.25px 19px 33px 19px;
-    margin-right: 2.3px;
+    margin-right: 31.5%;
   }
 
       .lineTwo {
     max-width: 100%;
-    top:195px;
-    margin-left:0px;
+    top:60%;
+    left:3%;
     display:flex;
-    position: fixed;
+    position: absolute;
   }
 
     .lineTwo .letter {
-border: 1px solid white;
-    padding: 25.25px 19px 33px 19px;
-    margin-right: 2.3px;
+margin-right: 31.5%;
   }
-
-  #lineOne::-webkit-scrollbar {
-    display: none;
-}
 
   </style>
 
@@ -123,19 +108,19 @@ border: 1px solid white;
 
 <div class="lineOne">
 
-  <img class="A" src="A.gif"> </video>
-  <img class="B" src="B.gif"> </video>
-  <img class="C" src="C.gif"> </video>
-  <img class="D" src="D.gif"> </video>
-  <img class="E" src="E.gif"> </video>
-  <img class="F" src="F.gif"> </video>
-  <img class="G" src="G.gif"> </video>
-  <img class="H" src="H.gif"> </video>
-  <img class="I" src="I.gif"> </video>
-  <img class="J" src="J.gif"> </img>
-  <img class="K" src="K.gif"> </video>
-  <img class="L" src="L.gif"> </video>
-  <img class="M" src="M.gif"> </video>
+  <a href="A.html"><img class="A" src="A.gif"></img></a>
+  <a href="B.html"><img class="B" src="B.gif"> </img></a>
+  <a href="C.html"><img class="C" src="C.gif"> </img></a>
+  <a href="D.html"><img class="D" src="D.gif"> </img></a>
+  <a href="E.html"><img class="E" src="E.gif"> </img></a>
+  <a href="F.html"><img class="F" src="F.gif"> </img></a>
+  <a href="G.html"><img class="G" src="G.gif"> </img></a>
+  <a href="H.html"><img class="H" src="H.gif"> </img></a>
+  <a href="I.html"><img class="I" src="I.gif"> </img></a>
+  <a href="J.html"><img class="J" src="J.gif"> </img></a>
+  <a href="K.html"><img class="K" src="K.gif"> </img></a>
+  <a href="L.html"><img class="L" src="L.gif"> </img></a>
+  <a href="M.html"><img class="M" src="M.gif"> </img></a>
 
 </div>
 
@@ -159,19 +144,19 @@ border: 1px solid white;
 
   <div class="lineThree">
     
-  <img class="N" src="N.gif"> </video>
-  <img class="O" src="O.gif"> </video>
-  <img class="P" src="P.gif"> </video>
-  <img class="Q" src="Q.PNG"> </img>
-  <img class="R" src="R.gif"> </video>
-  <img class="S" src="S.gif"> </video>
-  <img class="T" src="T.gif"> </video>
-  <img class="U" src="U.gif"> </video>
-  <img class="V" src="V.gif"> </video>
-  <img class="W" src="W.gif"> </video>
-  <img class="X" src="X.gif"> </img>
-  <img class="Y" src="Y.gif"> </video>
-  <img class="Z" src="Z.gif"> </video>
+  <a href="N.html"><img class="N" src="N.gif"> </img></a>
+  <a href="O.html"><img class="O" src="O.gif"> </img></a>
+  <a href="P.html"><img class="P" src="P.gif"> </img></a>
+  <a href="Q.html"><img class="Q" src="Q.PNG"></img></a>
+  <a href="R.html"><img class="R" src="R.gif"> </img></a>
+  <a href="S.html"><img class="S" src="S.gif"> </img></a>
+  <a href="T.html"><img class="T" src="T.gif"> </img></a>
+  <a href="U.html"><img class="U" src="U.gif"> </img></a>
+  <a href="V.html"><img class="V" src="V.gif"> </img></a>
+  <a href="W.html"><img class="W" src="W.gif"> </img></a>
+  <a href="X.html"><img class="X" src="X.gif"> </img></a>
+  <a href="Y.html"><img class="Y" src="Y.gif"> </img></a>
+  <a href="Z.html"><img class="Z" src="Z.gif"> </img></a>
 
   </div>
 
