--- a/HOME.html
+++ b/HOME.html
@@ -8,10 +8,6 @@
 
   <style>
 
-  * {
-    box-sizing: border-box;
-  }
-
   body {
     margin: 0;
     font-family: 'VT323', monospace;
@@ -27,27 +23,21 @@
 
   .lineOne {
   	max-width: 100%;
-    margin-top: 12.5%;
+  	margin-top: 3px;
+  	margin-bottom: 3px;
     display: flex;
     overflow-x: auto;
   }
 
-    .lineOne img{
+    .lineOne a {
 width:7.5%;
 height:25%;
-margin-right: 2px;
-  }
-
-    .lineOne a img{
-width:96%;
-height:96%;
 margin-left:1px;
 margin-right: 2px;
   }
 
     .lineThree {
     max-width: 100%;
-    margin-top: 13.5%;
     display: flex;
   }
 
@@ -58,53 +48,11 @@ margin-left:1px;
 margin-right: 2px;
   }
 
-    .lineZero {
-    max-width: 100%;
-    top:8%;
-    left:3%;
-    display:flex;
-    position: absolute;
-  }
-
-    .lineZero .letter {
-    margin-right: 31.5%;
-  }
-
-      .lineTwo {
-    max-width: 100%;
-    top:60%;
-    left:3%;
-    display:flex;
-    position: absolute;
-  }
-
-    .lineTwo .letter {
-margin-right: 31.5%;
-  }
-
   </style>
 
 </head>
 
 <body>
-
-  <div class="lineZero"> 
-
-<div class="letter">A</div>
-<div class="letter">B</div>
-<div class="letter">C</div>
-<div class="letter">D</div>
-<div class="letter">E</div>
-<div class="letter">F</div>
-<div class="letter">G</div>
-<div class="letter">H</div>
-<div class="letter">I</div>
-<div class="letter">J</div>
-<div class="letter">K</div>
-<div class="letter">L</div>
-<div class="letter">M</div>
-
-  </div>
 
 <div class="lineOne">
 
@@ -123,24 +71,6 @@ margin-right: 31.5%;
   <a href="M.html"><img class="M" src="M.gif"> </img></a>
 
 </div>
-
-  <div class="lineTwo"> 
-
-<div class="letter">N</div>
-<div class="letter">O</div>
-<div class="letter">P</div>
-<div class="letter">Q</div>
-<div class="letter">R</div>
-<div class="letter">S</div>
-<div class="letter">T</div>
-<div class="letter">U</div>
-<div class="letter">V</div>
-<div class="letter">W</div>
-<div class="letter">X</div>
-<div class="letter">Y</div>
-<div class="letter">Z</div>
-
-  </div>
 
   <div class="lineThree">
     
