--- a/FAQ3.html
+++ b/FAQ3.html
@@ -8,11 +8,7 @@
 
   <style>
 
-  * {
-    box-sizing: border-box;
-  }
-
-  body {
+    body {
     margin: 0;
     font-family: 'VT323', monospace;
     font-size: 36px;
@@ -26,114 +22,36 @@
   }
 
   .lineOne {
-    max-width: 734.75px;
-    margin-left:168.25px;
-    margin-top: 97.5px;
+    max-width: 100%;
+    margin-top: 3px;
+    margin-bottom: 3px;
     display: flex;
-    overflow-x: auto;
-  }
-
-    .writing {
-      max-width: 734.75px;
-    margin-left:168.25px;
-    margin-top: 97.5px;
-    display: flex;
-    overflow-x: auto;
-    background: white;
-    color:black;
-    visibility: hidden;
   }
 
   .lineOne img{
-width:54.75px;
-height:97.5px;
+width:7.5%;
+height:25%;
+margin-left:1px;
 margin-right: 2px;
   }
 
-      .lineOne video{
-width:54.75px;
-height:97.5px;
+    .lineOne video{
+width:7.5%;
+height:25%;
+margin-left:1px;
 margin-right: 2px;
   }
 
-  .FAQ {
-margin-left:903px;
-margin-top:-97.5px;
-position: fixed;
-display:flex;
-background: white;
-color:black;
+    .SPACE {
+visibility: hidden;
   }
 
-  .KEY {
-  max-width: 168.25px;
-    margin-top:-97.5px;
-    position: fixed;
-    display:flex;
-    background: white;
-    color:black;
-  }
-
-    .lineZero {
-    max-width: 75%;
-    top:0px;
-    margin-left:168.25px;
-    display:flex;
-    position: fixed;
-    visibility: hidden;
-  }
-
-    .lineZero .letter {
-border: 1px solid white;
-    padding: 25.25px 19px 33px 19px;
-    margin-right: 2.3px;
-  }
-
-      .writing .letter {
-border: 1px solid white;
-    padding: 25.25px 19px 33px 19px;
-    margin-right: 2.3px;
-  }
-
-      .lineTwo {
-    max-width: 75%;
-    top:195px;
-    margin-left:168.25px;
-    display:flex;
-    position: fixed;
-    visibility: hidden;
-  }
-
-    .lineTwo .letter {
-border: 1px solid white;
-    padding: 25.25px 19px 33px 19px;
-    margin-right: 2.3px;
-  }
-
-  .lineOne .letter {
-    padding: 25.25px 19px 33px 19px;
-    margin-right: 2.3px;
+a {
+text-decoration: none;
+color: #99FEB1;
+margin-top:5%;
 }
 
-      .KEY .letter {
-border: 1px solid white;
-    padding: 25.25px 19px 33px 19px;
-    margin-right: 2.3px;
-  }
-
-      .FAQ .letter {
-border: 1px solid white;
-    padding: 25.25px 19px 33px 19px;
-    margin-right: 2.3px;
-  }
-
-  .lineOne::-webkit-scrollbar {
-    display: none;
-}
-
-  .writing::-webkit-scrollbar {
-    display: none;
-}
 
   </style>
 
@@ -141,73 +59,39 @@ border: 1px solid white;
 
 <body>
 
-  <div class="lineZero"> 
-
-<div class="letter">A</div>
-<div class="letter">B</div>
-<div class="letter">C</div>
-<div class="letter">D</div>
-<div class="letter">E</div>
-<div class="letter">F</div>
-<div class="letter">G</div>
-<div class="letter">H</div>
-<div class="letter">I</div>
-<div class="letter">J</div>
-<div class="letter">K</div>
-<div class="letter">L</div>
-<div class="letter">M</div>
-
-  </div>
-
-<a href="KEY.html" class="KEY">
-
-<div class="letter">K</div>
-<div class="letter">E</div>
-<div class="letter">Y</div>
-
-</a>
-
-<a href="FAQ4.html" class="FAQ">
-
-<div class="letter">F</div>
-<div class="letter">A</div>
-<div class="letter">Q</div>
-
-</a>
-
 <div class="lineOne">
 
   <video autoplay loop muted src="W.MP4"></video>
   <video autoplay loop muted src="H.MP4"></video>
   <video autoplay loop muted src="A.MP4"></video>
   <video autoplay loop muted src="T.MP4"></video>
-  <div class="letter">_</div>
+  <img class="SPACE" src="SPACE.JPG"></img>
   <video autoplay loop muted src="D.MP4"></video>
   <video autoplay loop muted src="O.MP4"></video>
-    <div class="letter">_</div>
+  <img class="SPACE" src="SPACE.JPG"></img>
   <video autoplay loop muted src="Y.MP4"></video>
   <video autoplay loop muted src="O.MP4"></video>
   <video autoplay loop muted src="U.MP4"></video>
-  <div class="letter">_</div>
+  <img class="SPACE" src="SPACE.JPG"></img>
   <video autoplay loop muted src="D.MP4"></video>
   <video autoplay loop muted src="O.MP4"></video>
-  <div class="letter">_</div>
+  <img class="SPACE" src="SPACE.JPG"></img>
   <video autoplay loop muted src="I.MP4"></video>
   <video autoplay loop muted src="F.MP4"></video>
-  <div class="letter">_</div>
+  <img class="SPACE" src="SPACE.JPG"></img>
   <video autoplay loop muted src="Y.MP4"></video>
   <video autoplay loop muted src="O.MP4"></video>
   <video autoplay loop muted src="U.MP4"></video>
   <video autoplay loop muted src="R.MP4"></video>
-  <div class="letter">_</div>
+  <img class="SPACE" src="SPACE.JPG"></img>
   <video autoplay loop muted src="B.MP4"></video>
   <video autoplay loop muted src="I.MP4"></video>
   <video autoplay loop muted src="K.MP4"></video>
   <video autoplay loop muted src="E.MP4"></video>
-  <div class="letter">_</div>
+  <img class="SPACE" src="SPACE.JPG"></img>
   <video autoplay loop muted src="I.MP4"></video>
   <video autoplay loop muted src="S.MP4"></video>
-  <div class="letter">_</div>
+  <img class="SPACE" src="SPACE.JPG"></img>
   <img src="J.gif"></img>
   <video autoplay loop muted src="E.MP4"></video>
   <video autoplay loop muted src="A.MP4"></video>
@@ -215,10 +99,10 @@ border: 1px solid white;
   <video autoplay loop muted src="O.MP4"></video>
   <video autoplay loop muted src="U.MP4"></video>
   <video autoplay loop muted src="S.MP4"></video>
-  <div class="letter">_</div>
+  <img class="SPACE" src="SPACE.JPG"></img>
   <video autoplay loop muted src="O.MP4"></video>
   <video autoplay loop muted src="F.MP4"></video>
-  <div class="letter">_</div>
+  <img class="SPACE" src="SPACE.JPG"></img>
   <video autoplay loop muted src="A.MP4"></video>
   <video autoplay loop muted src="N.MP4"></video>
   <video autoplay loop muted src="O.MP4"></video>
@@ -226,31 +110,14 @@ border: 1px solid white;
   <video autoplay loop muted src="H.MP4"></video>
   <video autoplay loop muted src="E.MP4"></video>
   <video autoplay loop muted src="R.MP4"></video>
-  <div class="letter">_</div>
+  <img class="SPACE" src="SPACE.JPG"></img>
   <video autoplay loop muted src="B.MP4"></video>
   <video autoplay loop muted src="I.MP4"></video>
   <video autoplay loop muted src="K.MP4"></video>
   <video autoplay loop muted src="E.MP4"></video>
-  <div class="letter">?</div>
+  <img class="SPACE" src="SPACE.JPG"></img>
+  <a href="FAQ4.html" class="FAQ">next></a>
 </div>
-
-  <div class="lineTwo"> 
-
-<div class="letter">N</div>
-<div class="letter">O</div>
-<div class="letter">P</div>
-<div class="letter">Q</div>
-<div class="letter">R</div>
-<div class="letter">S</div>
-<div class="letter">T</div>
-<div class="letter">U</div>
-<div class="letter">V</div>
-<div class="letter">W</div>
-<div class="letter">X</div>
-<div class="letter">Y</div>
-<div class="letter">Z</div>
-
-  </div>
 
 </body>
 
