--- a/START.html
+++ b/START.html
@@ -49,7 +49,8 @@ margin-right: 2px;
   }
 
   .welcome {
-    max-width:50%;
+  max-width:50%;
+  transform: rotate(90deg);
   margin-left: auto;
   margin-right: auto;
   }
