--- a/START.html
+++ b/START.html
@@ -35,7 +35,7 @@ margin-top:5%;
 
 <body>
 
-<div class=welcome> welcome to BIKE FAQ in VIDEO ABC! this webzine uses animated ABC's to explore the intimacy between an inanimate bike and its rider. it raises questions like "HOW CAN YOU TELL IF YOUR BIKE IS CHEATING ON YOU?" and "how am i reading any of this?" this webzine would like to thank ADAM, MONICA, and SUNNIE for sharing their biking questions! <a href="STOP.html">next></a></div>
+<div class=welcome> welcome to BIKE FAQ in VIDEO ABC! this webzine uses animated ABC's to explore the intimacy between an inanimate bike and its rider. it raises questions like "HOW CAN YOU TELL IF YOUR BIKE IS CHEATING ON YOU?" and "how am i reading any of this?" this webzine would like to thank ADAM, MONICA, and SUNNIE for sharing their biking questions! <a href="HOME.html">next></a></div>
 
 </body>
 
