--- a/HOME.html
+++ b/HOME.html
@@ -48,6 +48,15 @@ margin-left:1px;
 margin-right: 2px;
   }
 
+  .text {
+top: 50%;
+display: block;
+  }
+
+  span{
+color: #99FEB1;
+  }
+
   </style>
 
 </head>
@@ -89,6 +98,13 @@ margin-right: 2px;
   <a href="Z.html"><img class="Z" src="Z.gif"> </img></a>
 
   </div>
+
+<div class="text">
+  <p>1. load <span>abcurdity.xyz</span> on desktop computer<br>
+  2. place smartphone in green rectangle<br>
+  3. reference phone while scrolling desktop<br>
+  <small>optional: tap on letters to view full-screen<small></p>
+</div>
 
 </body>
 
