--- a/FAQ.html
+++ b/FAQ.html
@@ -52,6 +52,18 @@ color: #99FEB1;
 margin-top:5%;
 }
 
+.rectangle {
+
+width:667px;
+height:300px;
+background:#99FEB1;
+bottom:0px;
+right:25%;
+left:50%;
+margin-left:-333px;
+position:absolute;
+}
+
   </style>
 
 </head>
@@ -95,6 +107,8 @@ margin-top:5%;
   <a href="FAQ2.html" class="FAQ">next></a>
 
 </div>
+
+<div class="rectangle"></div>
 
 </body>
 
