--- a/HOME.html
+++ b/HOME.html
@@ -100,7 +100,7 @@ color: #99FEB1;
   </div>
 
 <div class="text">
-  <p>1. load <span>abcurdity.xyz</span> on desktop computer<br>
+  <p>1. load <span>abcurdity.xyz/FAQ.html</span> on desktop computer<br>
   2. place smartphone in green rectangle<br>
   3. reference phone while scrolling desktop<br>
   <small>optional: tap on letters to view full-screen<small></p>
