--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=https://abcurdity.xyz/FAQ.html" />
+    <meta http-equiv="Refresh" content="0; url=https://abcurdity.xyz/START.html" />
   </head>
 </html>
